# hycan-db

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  requirements.txt  ruff.toml
data/raw/: measurements_v0.1.csv  test_measurements.csv
docs/: ai_usage_log.md  data_dictionary.md  literature_search_protocol.md  reproducibility_tiering.md
notebooks/: 00_setup_check.ipynb  01_corpus_overview.ipynb
references/: paper_tracking.csv
scripts/: validate_data.py
src/hycan/: clean.py  normalize.py  plotting.py  schema.py  validate.py
tests/: test_normalize.py  test_schema.py  test_validate.py
